--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   "author": "Daniel Kim",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
     "forever": "^0.15.3",
     "helmet": "^3.13.0",
     "http-port-forward": "^2.0.3",
+    "jquery": "^3.3.1",
+    "jquery.easing": "^1.4.1",
     "jsonfile": "^5.0.0",
-    "jsonwebtoken": "^8.3.0"
+    "jsonwebtoken": "^8.3.0",
+    "magnific-popup": "^1.1.0"
   }
 }
