--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonfile": "^5.0.0",
     "jsonwebtoken": "^8.3.0",
     "magnific-popup": "^1.1.0",
+    "php-express": "0.0.3",
     "pug": "^2.0.3"
   }
 }
